--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+a, a_visited, a:hover, a:active {
+  text-decoration: none;
+  color: #646777;
+}
