--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   /* justify-content: space-between; */
   align-items: center;
+  height: 65px;
+  background-color: #fff;
 }
 
 .Footer-navigation-container {
@@ -10,6 +12,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #F8F8F8;
 }
 
 .Footer-social-network-container {
@@ -32,10 +36,12 @@
   margin-right: 2%;
 }
 
-.Footer-social-networks > img {
+.Footer-social-networks img {
+  height: 35px;
   cursor: pointer;
 }
 
 .Footer-copyright {
   font-size: 8pt;
+  padding: 4px 0;
 }
