--- a/frontend/src/components/NavBar/index.css
+++ b/frontend/src/components/NavBar/index.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #fff;
 }
 
 .NavBar-logo-container {
