--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #F8F8F8;
 }
 
 a, a_visited, a:hover, a:active {
