--- a/frontend/src/Router/Login/index.css
+++ b/frontend/src/Router/Login/index.css
@@ -1,35 +1,42 @@
-.Signup-container {
-  height: calc(100vh - 130px);
+.Login-container {
+  height: calc(100vh - 150px);
   min-height: 300px;
 }
 
-.Signup-container-form {
+.Login-form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 300px;
   margin-top: 25px;
 }
 
-.Signup-container-form > h1 {
+.Login-form > h1 {
   text-transform: uppercase;
   font-size: 16pt;
   font-weight: 400;
   color: #4D4D4C;
 }
 
-.Signup-container-form > h1::after {
+.Login-form > h1::after {
   content: '';
   border-bottom: 2px solid #E47D31;
   position: relative;
   display: block;
-  width: 50%;
-  left: 25%;
+  width: 140%;
+  left: -20%;
   top: 15px;
 }
 
-.Signup-container-form > input {
+.Login-formfields-container {
+  width: 34%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Login-formfields-container > input {
+  margin-top: 15px;
   width: 250px;
   height: 30px;
   outline: none;
@@ -39,13 +46,14 @@
   border: none;
 }
 
-.Signup-container-form> input::placeholder {
+.Login-formfields-container> input::placeholder {
   font-size: 11pt;
   font-weight: 400;
   /* padding-left: 10px; */
 }
 
-.Signup-container-form > button {
+.Login-form > button {
+  margin: 40px;
   height: 40px;
   width: 150px;
   background-color: #E47D31;
