--- a/frontend/src/components/NavBar/index.css
+++ b/frontend/src/components/NavBar/index.css
@@ -21,7 +21,7 @@
 }
 
 .Navbar-nav {
-  width: 60%;
+  /* width: 60%; */
 }
 
 .Navbar-nav > ul {
@@ -60,8 +60,8 @@
 }
 
 .NavBar-auth-container {
-  width: 35%;
-  margin-right: 5%;
+  /* width: 35%; */
+  margin-right: 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -69,7 +69,7 @@
 }
 
 .NavBar-auth-signup, .NavBar-auth-login {
-  width: 50%;
+  width: 90px;
   height: 35px;
   background-color: #E47D31;
   border: none;
@@ -83,7 +83,11 @@
 
 .NavBar-auth-signup:active, .NavBar-auth-login:active {
   height: 37px;
-  width: 50.5%;
+  width: 92px;
+}
+
+.NavBar-auth-signup:active {
+  margin-left: -2px;
 }
 
 .NavBar-auth-signup {
@@ -95,4 +99,18 @@
   margin-left: 1px;
   border-top-right-radius: 16px;
   border-bottom-right-radius: 16px;
+}
+
+.NavBar-auth-logout {
+  width: 90px;
+  height: 35px;
+  background-color: #E47D31;
+  border: none;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 11pt;
+  font-weight: 100;
+  outline: none;
+  cursor: pointer;
+  border-radius: 16px;
 }
